--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: git-gateway
   branch: master
-  repo: UjjalKar/letsSeeCms
+  repo: UjjalKar/anup-sites
 
 media_folder: static/image
 public_folder: /image
